--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,6 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "python bot_simples.py"
+startCommand = "/opt/venv/bin/python bot_simples.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
