--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,12 @@
 [phases.setup]
 nixPkgs = ["python311"]
+cmds = [
+  "python3 -m venv /app/.venv",
+  "/app/.venv/bin/pip install --upgrade pip"
+]
 
 [phases.install]
-cmds = ["/opt/venv/bin/pip install -r requirements.txt"]
+cmds = ["/app/.venv/bin/pip install -r requirements.txt"]
 
 [start]
-cmd = "/opt/venv/bin/python bot_simples.py"
+cmd = "/app/.venv/bin/python bot_simples.py"
