--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,6 @@
 [build]
-builder = "NIXPACKS"
+builder = "DOCKER"
 
 [deploy]
-startCommand = "/opt/venv/bin/python bot_simples.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
